# dash-hangout-example

./: app.py  dev_app.py  docker-compose.yaml  eda.ipynb  pyproject.toml
api/: redis_cache.py  setup.py  sql_operator.py
api/config/: database.py  postgres.py  redis.py
api/models/: amazon.py  events.py
assets/: styles.css
global_components/: appshell.py  location.py  notifications.py  theme.py
pages/: page.py
pages/dashboard/: api.py  models.py  page.py
pages/dashboard/components/: actionbar.py  figures.py  graph_card.py  menu.py  select.py  switch.py
pages/echarts_dashboard/: page.py
pages/echarts_dashboard/components/: figures.py
pages/event_management/: api.py  models.py  page.py
pages/event_management/components/: actionbar.py  form.py  table.py
pages/event_management/event/: page.py
pages/ops_task/: page.py
utils/: constants.py  helpers.py
