[tool.poetry]
name = "dash-hangout-example"
version = "0.1.0"
description = ""
authors = ["Christian Giessel <cgiessel@tesla.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
sqlalchemy = "^2.0.40"
redis = "^5.2.1"
plotly = "^6.0.1"
dash = "^3.0.3"
dash-flash = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
